# exvpn-bot

./: .dockerignore  README.md  docker-compose.yml  openapi.json  pyproject.toml  united.py
.cursor/plans/: refactor_config_filename_generation_ea98173e.plan.md
bot/: Dockerfile  main.py
bot/core/: api_client.py  auth.py  exceptions.py  xray_panel_client.py
bot/database/: connection.py  models.py
bot/entities/client/: models.py  repository.py  service.py
bot/entities/cluster/: models.py  repository.py  service.py
bot/entities/peer/: models.py  (+2 more)
bot/keyboards/: admin.py  user.py
bot/management/: config_filename.py  dependencies.py  fsm_utils.py  logger.py  message_tracker.py  navigation.py  password.py  settings.py  timezone.py
bot/messages/: admin.py  user.py
bot/middlewares/: admin.py  fsm_cancel.py  terms.py
bot/payments/: rukassa.py  yookassa.py
bot/routers/: error_report.py  keys.py  legacy_callbacks.py  locations.py  profile.py  start.py  subscription.py
bot/scheduler/: subscription_expiry.py
bot/utils/: logger.py
migrations/: env.py
migrations/versions/: 10ee7c1775d7_delete_lowercase_name_field_for_cluster_.py  1bd3f115a76b_rename_troubleshooting_model_to_report_.py  28795494614f_add_pendind_payments_model.py  2fa8eec7fc6e_initial_migration.py  67c281334b80_updated_peer_and_cluster_models.py  6ac927a32a3a_make_default_value_for_reffer_id_value.py  80282ffc4771_add_promocore_models_and_add_refferal_.py  b02e400463df_update_cluster_model_add_peer_model.py  f5ea3bbf19b6_updated_peer_anc_cluster_models.py  f753c2ada927_initial_migration.py
(+32 files in other folders)
